--- a/info.plist
+++ b/info.plist
@@ -8,6 +8,8 @@
 	<array>
 		<string>270498A3-6DA1-448A-97DD-ED87DE968A31</string>
 		<string>E6C302A3-65DA-4175-B48E-30BDD3AE036A</string>
+		<string>AD976636-C73E-47A2-AF1E-B21AEA8A55E2</string>
+		<string>F26ECFBB-A2E9-4FFE-AD4B-8C251D9916E0</string>
 	</array>
 	<key>uuid</key>
 	<string>9F00FF74-7FD6-47C4-9BF3-73C1284B2677</string>
